<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SuperTrivialGame</string>
    <string name="splash_screen_title">Super\nTrivial\nGame</string>
    <string name="main_screen_title">MAIN MENU</string>
    <string name="settings_screen_title">SETTINGS</string>
    <string name="play_screen_title">PLAY GAME</string>
    <string name="scores_screen_title">SCORES</string>
    <string name="credits_screen_title">CREDITS</string>
    <string name="help_screen_title">HELP</string>
    <string name="questions_preferences_title">PREFERENCES</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="menu_item_unselect_all">Unselect all</string>
    <string name="main_menu_list_play">Play</string>
    <string name="main_menu_list_scores">Scores</string>
    <string name="main_menu_list_credits">Credits</string>
    <string name="local_scores_tab">Local users</string>
    <string name="friends_scores_tab">User friends</string>
    <string name="username_header">User name</string>
    <string name="score_header">Score</string>
    <string name="ranking_header">Ranking</string>
    <string name="username_text">User name:</string>
    <string name="email_address_text">Email address:</string>
    <string name="questions_preferences_text">Questions preferences:</string>
    <string name="questions_server_text">Questions server:</string>
    <string name="select_questions_button">Select preferences</string>
    <string name="questions_preferences_set">Preferences are set!</string>
    <string name="questions_preferences_not_set">Preferences are not set!</string>
    <string name="score_text">Score:</string>
    <string name="time_text">Time:</string>
    <string name="zero">0</string>
    <string name="textview_informacion1">Super Trivial Game para Programación Dispositivos Móviles y Multimedia.</string>
    <string name="textview_informacion2">Autor:</string>
    <string name="textview_informacion3">Néstor Martínez (nesmaba.campusaula@gmail.com)</string>
</resources>
